argodemo/deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo
  namespace: default
  labels:
    app: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        # https://github.com/argoproj/rollouts-demo
        # Available images colors are: red, orange, yellow, green, blue, purple (e.g. argoproj/rollouts-demo:yellow). Also available are:
        # High error rate images, prefixed with the word bad (e.g. argoproj/rollouts-demo:bad-yellow)
        # High latency images, prefixed with the word slow (e.g. argoproj/rollouts-demo:slow-yellow)
        image: argoproj/rollouts-demo:yellow
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 10
      - pause:
          duration: 60
